cpp/src/tiledb/cxx_api/tiledb.h


TILEDB_EXPORT int32_t
tiledb_query_type_to_str(tiledb_query_type_t query_type, const char** str);
TILEDB_EXPORT int32_t
tiledb_query_type_from_str(const char* str, tiledb_query_type_t* query_type);
TILEDB_EXPORT int32_t
tiledb_object_type_to_str(tiledb_object_t object_type, const char** str);
TILEDB_EXPORT int32_t
tiledb_object_type_from_str(const char* str, tiledb_object_t* object_type);
TILEDB_EXPORT int32_t
tiledb_filesystem_to_str(tiledb_filesystem_t filesystem, const char** str);
TILEDB_EXPORT int32_t
tiledb_filesystem_from_str(const char* str, tiledb_filesystem_t* filesystem);
TILEDB_EXPORT int32_t
tiledb_datatype_to_str(tiledb_datatype_t datatype, const char** str);
TILEDB_EXPORT int32_t
tiledb_datatype_from_str(const char* str, tiledb_datatype_t* datatype);
TILEDB_EXPORT int32_t
tiledb_array_type_to_str(tiledb_array_type_t array_type, const char** str);
TILEDB_EXPORT int32_t
tiledb_array_type_from_str(const char* str, tiledb_array_type_t* array_type);
TILEDB_EXPORT int32_t
tiledb_layout_to_str(tiledb_layout_t layout, const char** str);
TILEDB_EXPORT int32_t
tiledb_layout_from_str(const char* str, tiledb_layout_t* layout);
TILEDB_EXPORT int32_t tiledb_encryption_type_to_str(
    tiledb_encryption_type_t encryption_type, const char** str);
TILEDB_EXPORT int32_t tiledb_encryption_type_from_str(
    const char* str, tiledb_encryption_type_t* encryption_type);
TILEDB_EXPORT int32_t tiledb_query_status_to_str(
    tiledb_query_status_t query_status, const char** str);
TILEDB_EXPORT int32_t tiledb_query_status_from_str(
    const char* str, tiledb_query_status_t* query_status);
TILEDB_EXPORT int32_t
tiledb_walk_order_to_str(tiledb_walk_order_t walk_order, const char** str);
TILEDB_EXPORT int32_t
tiledb_walk_order_from_str(const char* str, tiledb_walk_order_t* walk_order);
TILEDB_EXPORT int32_t
tiledb_vfs_mode_to_str(tiledb_vfs_mode_t vfs_mode, const char** str);
TILEDB_EXPORT int32_t
tiledb_vfs_mode_from_str(const char* str, tiledb_vfs_mode_t* vfs_mode);
TILEDB_DEPRECATED_EXPORT const char* tiledb_coords(void);
TILEDB_EXPORT uint32_t tiledb_var_num(void);
TILEDB_EXPORT uint32_t tiledb_max_path(void);
TILEDB_EXPORT uint64_t tiledb_datatype_size(tiledb_datatype_t type);
TILEDB_EXPORT uint64_t tiledb_offset_size(void);
TILEDB_EXPORT uint64_t tiledb_timestamp_now_ms(void);
TILEDB_EXPORT void tiledb_version(int32_t* major, int32_t* minor, int32_t* rev);
typedef struct tiledb_buffer_t tiledb_buffer_t;
typedef struct tiledb_buffer_list_t tiledb_buffer_list_t;
typedef struct tiledb_ctx_t tiledb_ctx_t;
typedef struct tiledb_error_t tiledb_error_t;
typedef struct tiledb_query_t tiledb_query_t;
typedef struct tiledb_vfs_t tiledb_vfs_t;
TILEDB_EXPORT int32_t
tiledb_error_message(tiledb_error_t* err, const char** errmsg);
TILEDB_EXPORT void tiledb_error_free(tiledb_error_t** err);
TILEDB_EXPORT int32_t
tiledb_buffer_alloc(tiledb_ctx_t* ctx, tiledb_buffer_t** buffer);
TILEDB_EXPORT void tiledb_buffer_free(tiledb_buffer_t** buffer);
TILEDB_EXPORT int32_t tiledb_buffer_set_type(
    tiledb_ctx_t* ctx, tiledb_buffer_t* buffer, tiledb_datatype_t datatype);
TILEDB_EXPORT int32_t tiledb_buffer_get_type(
    tiledb_ctx_t* ctx,
    const tiledb_buffer_t* buffer,
    tiledb_datatype_t* datatype);
TILEDB_EXPORT int32_t tiledb_buffer_get_data(
    tiledb_ctx_t* ctx,
    const tiledb_buffer_t* buffer,
    void** data,
    uint64_t* num_bytes);
TILEDB_EXPORT int32_t tiledb_buffer_set_data(
    tiledb_ctx_t* ctx, tiledb_buffer_t* buffer, void* data, uint64_t size);
TILEDB_EXPORT int32_t
tiledb_buffer_list_alloc(tiledb_ctx_t* ctx, tiledb_buffer_list_t** buffer_list);
TILEDB_EXPORT void tiledb_buffer_list_free(tiledb_buffer_list_t** buffer_list);
TILEDB_EXPORT int32_t tiledb_buffer_list_get_num_buffers(
    tiledb_ctx_t* ctx,
    const tiledb_buffer_list_t* buffer_list,
    uint64_t* num_buffers);
TILEDB_EXPORT int32_t tiledb_buffer_list_get_buffer(
    tiledb_ctx_t* ctx,
    const tiledb_buffer_list_t* buffer_list,
    uint64_t buffer_idx,
    tiledb_buffer_t** buffer);
TILEDB_EXPORT int32_t tiledb_buffer_list_get_total_size(
    tiledb_ctx_t* ctx,
    const tiledb_buffer_list_t* buffer_list,
    uint64_t* total_size);
TILEDB_EXPORT int32_t tiledb_buffer_list_flatten(
    tiledb_ctx_t* ctx,
    const tiledb_buffer_list_t* buffer_list,
    tiledb_buffer_t** buffer);
TILEDB_EXPORT int32_t tiledb_query_submit_async(
    tiledb_ctx_t* ctx,
    tiledb_query_t* query,
    void (*callback)(void*),
    void* callback_data);
TILEDB_EXPORT int32_t tiledb_object_walk(
    tiledb_ctx_t* ctx,
    const char* path,
    tiledb_walk_order_t order,
    int32_t (*callback)(const char*, tiledb_object_t, void*),
    void* data);
TILEDB_EXPORT int32_t tiledb_object_ls(
    tiledb_ctx_t* ctx,
    const char* path,
    int32_t (*callback)(const char*, tiledb_object_t, void*),
    void* data);
TILEDB_EXPORT int32_t tiledb_vfs_ls(
    tiledb_ctx_t* ctx,
    tiledb_vfs_t* vfs,
    const char* path,
    int32_t (*callback)(const char*, void*),
    void* data);